<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files online</string>
    <string name="action_settings">Settings</string>
    <string name="download_text">Download</string>
    <string name="download_success">Downloaded Successfully!</string>
    <string name="notification_title">"\n"<b>Udacity:"\n"</b> Android Kotlin Nanodegree (AKND) </string>
    <string name="notification_description">The project repository is now downloaded</string>
    <string name="notification_button">See the changes</string>
    <string name="button_click">Click here!</string>
    <string name="button_loading">Now loading </string>
    <string name="title_detail_activity">DetailActivity</string>
    <string name="glide_text"><b>"\n"Glide"\n"</b> Image Upload Library, by BumpTech</string>
    <string name="retrofit_text"><b>"\n"Retrofit"\n"</b> Type-safe HTTP client for Android, by Square (INC)</string>
    <string name="repository_text"><b>"\n"LoadApp"\n"</b> Load the repository of Udacity</string>
    <string name="select_repository">Please select a new file to download</string>
    <string name="get_to_home">Get to Home</string>
    <string name="image_cloud">image_cloud</string>
</resources>
